Fix double-scrollbar in chrome. Refs #242.

--- a/framebuzz/static/framebuzz/profiles/sass/screen.scss
+++ b/framebuzz/static/framebuzz/profiles/sass/screen.scss
@@ -699,6 +699,7 @@ body.profiles {
                     max-height: 112px;
                     overflow: scroll;
                     padding: 1px 9px;
+                    word-wrap: break-word;
                 }
             }
 
